# fantasy-football-intelligence

./: .env.example  .gitignore  API_TO_DATABASE_MAPPING.md  LEAGUE_SUMMARY.md  RAG_SYSTEM_COMPLETE.md  README.md  YAHOO_API_REFERENCE.md  YAHOO_LOCAL_SETUP.md  league_rules.md  pyproject.toml
data/: backtest_name_overrides.json  p_starts.json
docs/: 2026-07-08-PROJECT-RECORD.md  2026-07-09-PHASE2-HANDOFF.md  2026-07-10-PHASE3-HANDOFF.md  2026-07-10-PHASE4-HANDOFF.md  2026-07-15-session-handoff.md  2026-07-20-session-handoff.md  2026-07-21-session-handoff.md
launchd/: com.ffi.morning.plist  com.ffi.simfarm.plist
migrations/: 001_foundation.sql  002_scoring_valuation.sql  003_nflverse_widen.sql  004_nflverse_kicking.sql  005_sim.sql  006_draft.sql  007_signals.sql  008_signals_pct_cap_fix.sql
queries/: sample_analytics.sql
schema/: create_tables.sql  create_views.sql  draft_analysis_simple.sql  draft_analysis_tables.sql  draft_analysis_tables_v2.sql  trend_analysis_views.sql
scripts/: add_rookie_overrides.py  audit_league_history.py  audit_nflverse_vs_yahoo.py  audit_scoring_settings.py  backfill_def_k_weeks.py  backfill_draft_teams.py  backtest_p_starts.py  backup_db.sh  baseline_sensitivity_report.py  bonus_calibration_report.py  build_backtest_pools.py  build_crosswalk.py  build_def_map.py  build_valuation.py  calibrate_opponents.py  cheat_sheet.py  cheat_sheet_html.py  cleanup_legacy_slug_players.py  confirm_signals.py  daily_ingest.sh  demo_single_draft.py  draft_agent_lane.py  draft_assistant.py  draft_console.py  draft_diagnostic.py  drill_draft.py  (+51 more)
(+131 files in other folders)
