[project]
name = "ffi"
version = "0.1.0"
description = "Fantasy football draft intelligence (2026 rebuild)"
requires-python = ">=3.11"
dependencies = [
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "pydantic>=2.7",
    "structlog>=24.1",
    "yahoo-fantasy-api>=2.9",
    "yahoo-oauth>=2.0",
    "nflreadpy>=0.1",
    "polars>=1.0",
    "scipy>=1.12",
    "scikit-learn>=1.4",
]

[dependency-groups]
dev = ["pytest>=8.0", "hypothesis>=6.100"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ffi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
